--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ x-airflow-base: &airflow-base
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth'
     PYTHONPATH: "/opt/airflow/src:${PYTHONPATH}"
   volumes:
-    - ./config/airflow.cfg:/opt/airflow/airflow.cfg
+    - ./configs/airflow.cfg:/opt/airflow/airflow.cfg
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
