--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,12 @@ x-airflow-base: &airflow-base
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth'
     PYTHONPATH: "/opt/airflow/src:${PYTHONPATH}"
   volumes:
-    - ./configs/airflow.cfg:/opt/airflow/airflow.cfg
+    - ./config/airflow.cfg:/opt/airflow/airflow.cfg
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
     - ./src:/opt/airflow/src
-    - ./configs:/opt/airflow/configs
+    - ./config:/opt/airflow/config
 
 services:
   postgres:
