--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3.7'
 
 x-airflow-base: &airflow-base
   build: .                             # construye con nuestro Dockerfile corregido
-  user: "${AIRFLOW_UID:-50000}:${AIRFLOW_GID:-50000}"
+  user: "${AIRFLOW_UID}:${AIRFLOW_GID}"
   env_file:
     - .env                             # carga GEMINI_API_KEY (y cualquier otra var. secreta)
   environment:
     AIRFLOW__CORE__EXECUTOR: LocalExecutor
-    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
+    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres/${POSTGRES_DB}
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth'
     PYTHONPATH: "/opt/airflow/src:${PYTHONPATH}"
@@ -24,9 +24,9 @@ services:
     image: postgres:15
     restart: always
     environment:
-      POSTGRES_USER:     airflow
-      POSTGRES_PASSWORD: airflow
-      POSTGRES_DB:       airflow
+      POSTGRES_USER:     ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB:       ${POSTGRES_DB}
     ports:
       - "5432:5432"
 
