fix: carpeta de exports/ no estaba en docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ x-airflow-base: &airflow-base
     - ./src:/opt/airflow/src
     - ./config:/opt/airflow/config
     - ./scripts:/opt/airflow/scripts
+    - ./exports:/opt/airflow/exports
 
 services:
   postgres:
